<resources>
    <string name="app_name">PersonalAlarmClock</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="_00_00">00:00</string>
    <string name="time">Time:</string>
    <string name="date">Date:</string>
    <string name="_00_00_0000">00/00/0000</string>
    <string name="repeat">Repeat</string>
    <string name="no_name">No name</string>

    <!--weekdays-->
    <string name="sunday">SU</string>
    <string name="monday">MO</string>
    <string name="tuesday">TU</string>
    <string name="wednesday">WE</string>
    <string name="thursday">TH</string>
    <string name="friday">FR</string>
    <string name="saturday">SA</string>
</resources>
