<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <android.support.v7.widget.CardView
                android:id="@+id/alFr_dateTimeCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_margin="15dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp">

                    <TextView
                        android:id="@+id/alFr_text_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:text="@string/time"
                        android:textSize="35sp"/>

                    <TextView
                        android:id="@+id/alFr_tv_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_toEndOf="@id/alFr_text_time"
                        android:layout_toRightOf="@id/alFr_text_time"
                        android:gravity="center"
                        android:text="@string/_00_00"
                        android:textSize="35sp"/>

                    <TextView
                        android:id="@+id/alFr_text_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignEnd="@id/alFr_text_time"
                        android:layout_alignLeft="@id/alFr_text_time"
                        android:layout_alignRight="@id/alFr_text_time"
                        android:layout_alignStart="@id/alFr_text_time"
                        android:layout_below="@id/alFr_text_time"
                        android:text="@string/date"
                        android:textSize="25sp"/>

                    <TextView
                        android:id="@+id/alFr_tv_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignEnd="@id/alFr_tv_time"
                        android:layout_alignLeft="@id/alFr_tv_time"
                        android:layout_alignRight="@id/alFr_tv_time"
                        android:layout_alignStart="@id/alFr_tv_time"
                        android:layout_below="@id/alFr_tv_time"
                        android:gravity="center"
                        android:text="@string/_00_00_0000"
                        android:textSize="25sp"/>

                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <EditText
                android:id="@+id/alFr_et_massage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/alFr_dateTimeCard"
                android:layout_alignRight="@+id/alFr_dateTimeCard"
                android:layout_alignEnd="@+id/alFr_dateTimeCard"
                android:layout_alignLeft="@+id/alFr_dateTimeCard"
                android:layout_alignStart="@+id/alFr_dateTimeCard"
                android:layout_centerHorizontal="true"
                android:scrollHorizontally="false"
                android:textSize="20sp"/>

            <CheckBox
                android:id="@+id/alFr_check_repeat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/alFr_dateTimeCard"
                android:layout_alignStart="@+id/alFr_dateTimeCard"
                android:layout_below="@+id/alFr_et_massage"
                android:text="@string/repeat"
                android:textSize="18sp"/>

            <ViewStub
                android:id="@+id/alFr_weekdays_stub"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:layout_below="@id/alFr_check_repeat"
                android:gravity="center_horizontal"
                android:visibility="gone"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_alignParentBottom="true"
                android:layout_below="@id/alFr_weekdays_stub"
                android:layout_alignLeft="@+id/alFr_dateTimeCard"
                android:layout_alignStart="@+id/alFr_dateTimeCard"/>

        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/alFr_btn_set"
        style="@style/MainButton"
        android:background="@drawable/ic_checkbox_marked_grey600_48dp"/>

    <Button
        android:id="@+id/alFr_btn_cancel"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignBaseline="@+id/alFr_btn_set"
        android:layout_alignBottom="@+id/alFr_btn_set"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:textSize="15sp"
        android:background="@drawable/ic_keyboard_backspace_grey600_48dp"/>

    <Button
        android:id="@+id/alFr_btn_delete"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignBaseline="@+id/alFr_btn_set"
        android:layout_alignBottom="@+id/alFr_btn_set"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp"
        android:textSize="15sp"
        android:background="@drawable/ic_delete_grey600_48dp"/>

</RelativeLayout>
